Added mustache templating, implemented experience section generation from template

--- a/index.html
+++ b/index.html
@@ -274,16 +274,20 @@
             <div class="subheading">Bachelor of Science</div>
             <div>Computer Science</div>
             <div class="subheading mb-3">Representative Courses</div>
+            <div>Human-Computer Interaction</div> 
             <ul class="fa-ul mb-0">
               <li>
-                <i class="fa-li fa fa-vr-cardboard"></i> CMSC 20300 - Intro to Human-Computer Interaction (Currently Enrolled)
+                <i class="fa-li fa fa-vr-cardboard"></i> CMSC 20300 - Intro to Human-Computer Interaction
               </li>
               <li>
-                <i class="fa-li fa fa-vr-cardboard"></i> MAAD 23281 - Topics in Human Robot Interaction (Currently Enrolled)
+                <i class="fa-li fa fa-vr-cardboard"></i> MAAD 23281 - Topics in Human Robot Interaction
               </li>
               <li>
                 <i class="fa-li fa fa-vr-cardboard"></i> MAAD 24920 - Virtual Reality Production
               </li>
+            </ul>
+            <div>Computer Science</div>
+            <ul class="fa-ul mb-0">
               <li>
                 <i class="fa-li fa fa-project-diagram"></i> CMSC 29512 - Entrepeneurship in Technology <b>* Master's Level</b>
               </li>
@@ -303,6 +307,9 @@
               <li>
                 <i class="fa-li fa fa-calculator"></i> CMSC 27200 - Theory of Algorithms
               </li> 
+            </ul>
+            <div>Biology</div>
+            <ul class="fa-ul mb-0">
               <li>
                 <i class="fa-li fa fa-dna"></i> ECEV 44500 - Networks in Ecology and Evolution <b>* Graduate Level</b>
               </li>
@@ -360,208 +367,12 @@
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
-      <div class="w-100">
+      <div class="w-100" id = "experience-container">
         <h2 class="mb-5">Experience</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">
-              <img src="img\Experience Icons\amazon.jpg" class="icon_photo"> &nbsp
-              Amazon - New York, NY
-            </h3>
-            <div class="subheading mb-3">Software Development Engineer</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Beginning Sept. 2022</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">
-              <img src="img\Experience Icons\hci_lab.jpg" class="icon_photo"> &nbsp
-              Human Computer Intigration Lab - Chicago, IL
-            </h3>
-            <div class="subheading mb-3">Undergrad Research Assistant (Unity, HTC Vive, Arduino)</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Design immersive VR applications which interface with experimental haptic devices 
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">November 2021 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">
-              <img src="img\Experience Icons\arch.jfif" class="icon_photo"> &nbsp
-              Arch Capital Group. Ltd. - Remote / New York, NY
-              
-            </h3>
-            <div class="subheading mb-3">Software Engineering Intern (Azure, Kubernetes, Docker, Python)</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Enhance the safety of customer and corporate data by designing and coordinating a transition between security infrastructure and policies in live, customer-facing cloud software
-              </li>
-              <li>
-                Facilitate internal mobility by developing a Kubernetes training curriculum for engineers from other teams and new hires, composed of written educational content and an interactive cloud application development and deployment tutorial in Confluence
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2021 - August 2021</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Media, Arts, Data and Design Center at the University of Chicago - Chicago, IL</h3>
-            <div class="subheading mb-3">Hack Arts Lab (HAL) & Weston Game Lab (WGL) Technician</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Trained and assisted visiting students and faculty with proper usage of fabriccation machinery - laser cutters, CNC machines, vinyl cutters, 3D printers, soldering irons
-              </li>
-              <li>
-                Managed day to day operations by administering lab resources, managing visitor appointments and chekouts, and maintaining and repairing equipment
-              </li>
-              <li>
-                Improved training processes by writing machine and lab procedure turorials and administering certification exams
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">October 2019 - October 2021</span>
-          </div>
-        </div>
-        
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Character Search, Paleontology Department at the UNiversity of Chicago - Chicago, IL</h3>
-            <div class="subheading mb-3">Lead Developer (React JS, AWS, GitHub)</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Develop web-based software tool and database for conducting cladistic analysis and storing character data
-              </li>
-              <li>
-                Work with Paleontologist Paul Sereno to develop software to execute his novel cladistic analysis methodology
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2019 - June 2021</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Old Cow - Baltimore, MD / Remote</h3>
-            <div class="subheading mb-3">Graphic Design and Web Development (Adobe Illustrator, WordPress)</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Create all of the company’s design materials, including logos, merchandise, social media images, and design guides
-              </li>
-              <li>
-                Develop the company website and manage the company’s IT administration
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2019 - June 2021</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Yuval Shaked Lab at the Technion-Israel Institute of Technology - Haifa, IL</h3>
-            <div class="subheading mb-3">Website Designer and Developer</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Designed and constructed a website for one of the Cancer Science Department’s Research Labs
-              </li>
-              <li>
-                The redesigned website increased the number of research position applicants by about 200%
-              </li>
-              <li>
-                Manage the website, performing regular maintenance and content updates
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2018 - June 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Regulus - Haifa, Israel</h3>
-            <div class="subheading mb-3">Intern</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Conducted research on the GPS and automated vehicle industries for GPS sensor security startup
-              </li>
-              <li>
-                Prepared and presented findings to the CEO and company-wide
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2018 - August 2018</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Fokoya - Tel Aviv, IL</h3>
-            <div class="subheading mb-3">Intern in Project Management and Advertising r</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Developed and marketed the Cryptocurrency Community Database, a forum-like system created in Google Sheets
-              </li>
-              <li>
-                Produced and hosted a livestream for product marketing and community engagement on 4 social media platforms
-              </li>
-              <li>
-                Automated manual office processes by developing a Google Chrome extension to perform application testing functions, cutting down a task that formerly took hours to only a few seconds
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">February 2018 - June 2018</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Johns Hopkins University, Department of Neuroscience - Baltimore, MD</h3>
-            <div class="subheading mb-3">Research Assistant</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Assisted researchers with statistical analysis of RNA sequencing data utilizing the language R
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">December 2015 - December 2016</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Young People’s Summer Stock Performing & Creative Arts Camp - Baltimore, MD</h3>
-            <div class="subheading mb-3">Camp Photographer, Photography and Videography Teacher, Camp Counselor</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Responsible for all camp photography. Created a curriculum for and taught a beginner level photography class for 25 campers of various ages
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Summer 2014,'15,'16,'17</span>
-          </div>
-        </div>
+        <!-- This section is filled in by the JS -->
+        <!-- Edit the content by editing content/experiences.json -->
+        <!-- See js/templating.js for implementation details -->
 
       </div>
     </section>
@@ -774,8 +585,16 @@
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
+  <!-- Mustache.js for Templating   -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
+
   <!-- Custom scripts for this template -->
   <script src="js/resume.min.js"></script>
+
+  <!-- My Custom Templating Code -->
+  <script src="js/templating.js"></script>
+
+
 
 </body>
 
