Added portfolio items to portfolio.json

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -246,7 +246,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="../js/resume.min.js"></script>
-  <script src="../js/portfolio.js"></script>
+  <script src="../js/gallery.js"></script>
 
 </body>
 
