--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio2.html#es">
-              <img class="rig-img" src="img\Engineering Society\Engineering Department Logo 4-3-02.png">
+              <img class="rig-img" src="img/Engineering_Society/Engineering_Department_Logo_4-3-02.png">
               <span class="rig-overlay"></span>
               <span class="rig-text">UChicago Engineering Society
                 <br>
@@ -162,7 +162,7 @@
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio2.html#CCD">
-              <img class="rig-img" src="img/CCD/CCD 4-3.png">
+              <img class="rig-img" src="img/CCD/CCD_4-3.png">
               <span class="rig-overlay"></span>
               <span class="rig-text">The CCD
                 <br>
@@ -182,7 +182,7 @@
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio3.html#shakedlab">
-              <img class="rig-img" src="img/Shaked/Home 4-3.jpg">
+              <img class="rig-img" src="img/Shaked/Home_4-3.jpg">
               <span class="rig-overlay"></span>
               <span class="rig-text">Shaked Lab Website
                 <br>
@@ -202,7 +202,7 @@
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio4.html#bagel">
-              <img class="rig-img" src="img/Bagel/Bagel 4-3.png">
+              <img class="rig-img" src="img/Bagel/Bagel_4-3.png">
               <span class="rig-overlay">
               </span>
               <span class="rig-text">Bagel
@@ -213,7 +213,7 @@
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio4.html#go">
-              <img class="rig-img" src="img/Go/go 4-3.png">
+              <img class="rig-img" src="img/Go/go_4-3.png">
               <span class="rig-overlay"></span>
               <span class="rig-text">Go
                 <br>
@@ -223,7 +223,7 @@
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio4.html#abstract">
-              <img class="rig-img" src="img\Abstract Photography\Drain Photo 4-3.jpg">
+              <img class="rig-img" src="img\Abstract_Photography\Drain_Photo_4-3.jpg">
               <span class="rig-overlay"></span>
               <span class="rig-text">Abstract Photography
                 <br>
@@ -544,14 +544,13 @@
         <div class="subheading mb-3">Recent Reads</div>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-book"></i> <i>Invisible Planets: Contemporary Chinese Science Fiction in Translation</i> edited by Ken Liu. (Currently Reading)
+            <i class="fa-li fa fa-book"></i> <i>Invisible Planets: Contemporary Chinese Science Fiction in Translation</i> edited by Ken Liu.
           </li>
           <li>
-            <i class="fa-li fa fa-book"></i> <i>Algorithms to Live By</i> by Brian Christian and Tom Griffiths. - Exceptional Book that cleverly applies Computer Science intution to real-world problems and in doing so, applies real-world
-            intution to the study of computer science.
+            <i class="fa-li fa fa-book"></i> <i>Algorithms to Live By</i> by Brian Christian and Tom Griffiths.
           </li>
           <li>
-            <i class="fa-li fa fa-book"></i> <i>The Wasp That Brainwashed the Caterpillar</i> by Matt Simon. - A fun book that dives into the fun, fascinating, and fiendish solutions that natural selection has given us to some of nature's toughest problems.
+            <i class="fa-li fa fa-book"></i> <i>The Wasp That Brainwashed the Caterpillar</i> by Matt Simon.
           </li>
         </ul>
       </div>
@@ -593,6 +592,7 @@
 
   <!-- My Custom Templating Code -->
   <script src="js/templating.js"></script>
+  <script src="js/portfolio.js"></script>
 
 
 
