Updated portfolio layout to generate from js and space names to underscore

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -125,42 +125,42 @@
 
           <div class="mySlides">
             <div class="numbertext">1 / 8</div>
-            <img src="..\img\Nature Photography\Baltimore 2020\Owl.png" style="width:100%">
+            <img src="..\img\Nature_Photography\Baltimore_2020\Owl.png" style="width:100%">
           </div>
 
           <div class="mySlides">
             <div class="numbertext">2 / 8</div>
-            <img src="..\img\Nature Photography\Baltimore 2020\Frog Petals.jpg" style="width:100%">
+            <img src="..\img\Nature_Photography\Baltimore_2020\Frog Petals.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
             <div class="numbertext">3 / 8</div>
-            <img src="..\img\Nature Photography\Baltimore 2020\Frog.jpg" style="width:100%">
+            <img src="..\img\Nature_Photography\Baltimore_2020\Frog.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
             <div class="numbertext">4 / 8</div>
-            <img src="..\img\Nature Photography\Baltimore 2020\Flower.jpg" style="width:100%">
+            <img src="..\img\Nature_Photography\Baltimore_2020\Flower.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
             <div class="numbertext">5 / 8</div>
-            <img src="..\img\Nature Photography\Baltimore 2020\Pheasant.jpg" style="width:100%">
+            <img src="..\img\Nature_Photography\Baltimore_2020\Pheasant.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
             <div class="numbertext">6 / 8</div>
-            <img src="..\img\Nature Photography\Baltimore 2020\Groundhog.jpg" style="width:100%">
+            <img src="..\img\Nature_Photography\Baltimore_2020\Groundhog.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
             <div class="numbertext">7 / 8</div>
-            <img src="..\img\Nature Photography\Baltimore 2020\Blue Jay.jpg" style="width:100%">
+            <img src="..\img\Nature_Photography\Baltimore_2020\Blue Jay.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
             <div class="numbertext">8 / 8</div>
-            <img src="..\img\Nature Photography\Baltimore 2020\Deer.png" style="width:100%">
+            <img src="..\img\Nature_Photography\Baltimore_2020\Deer.png" style="width:100%">
           </div>
 
           
@@ -177,28 +177,28 @@
           <!-- Thumbnail images -->
           <div class="row-gal">
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Owl.png" style="width:100%" onclick="currentSlide(1)" alt="Barred Owl - Baltimore, MD">
+              <img class="demo cursor" src="..\img\Nature_Photography\Baltimore_2020\Owl.png" style="width:100%" onclick="currentSlide(1)" alt="Barred Owl - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Frog Petals.jpg" style="width:100%" onclick="currentSlide(2)" alt="American Bullfrog - Baltimore, MD">
+              <img class="demo cursor" src="..\img\Nature_Photography\Baltimore_2020\Frog Petals.jpg" style="width:100%" onclick="currentSlide(2)" alt="American Bullfrog - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Frog.jpg" style="width:100%" onclick="currentSlide(3)" alt="American Bullfrog - Baltimore, MD">
+              <img class="demo cursor" src="..\img\Nature_Photography\Baltimore_2020\Frog.jpg" style="width:100%" onclick="currentSlide(3)" alt="American Bullfrog - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Flower.jpg" style="width:100%" onclick="currentSlide(4)" alt="Weeping Cherry Tree - Baltimore, MD">
+              <img class="demo cursor" src="..\img\Nature_Photography\Baltimore_2020\Flower.jpg" style="width:100%" onclick="currentSlide(4)" alt="Weeping Cherry Tree - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Pheasant.jpg" style="width:100%" onclick="currentSlide(5)" alt="Ring-Necked Pheasant - Baltimore, MD">
+              <img class="demo cursor" src="..\img\Nature_Photography\Baltimore_2020\Pheasant.jpg" style="width:100%" onclick="currentSlide(5)" alt="Ring-Necked Pheasant - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Groundhog.jpg" style="width:100%" onclick="currentSlide(6)" alt="Groundhog - Baltimore, MD">
+              <img class="demo cursor" src="..\img\Nature_Photography\Baltimore_2020\Groundhog.jpg" style="width:100%" onclick="currentSlide(6)" alt="Groundhog - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Blue Jay.jpg" style="width:100%" onclick="currentSlide(7)" alt="Blue Jay - Baltimore, MD">
+              <img class="demo cursor" src="..\img\Nature_Photography\Baltimore_2020\Blue Jay.jpg" style="width:100%" onclick="currentSlide(7)" alt="Blue Jay - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Deer.png" style="width:100%" onclick="currentSlide(8)" alt="White-tailed Deer - Baltimore, MD">
+              <img class="demo cursor" src="..\img\Nature_Photography\Baltimore_2020\Deer.png" style="width:100%" onclick="currentSlide(8)" alt="White-tailed Deer - Baltimore, MD">
             </div>
             
           </div>
