--- a/index.html
+++ b/index.html
@@ -110,127 +110,6 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h2>
         <ul id="rig">
-          <li>
-            <a class="rig-cell" href="html/portfolio.html#EB">
-              <img class="rig-img" src="img\EarlyBird\4-3.png">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">Early Bird
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio.html#balt">
-              <img class="rig-img" src="img\Nature Photography\Baltimore 2020\Owl_4-3.jpg">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">Nature Photography: Quarantine 2020
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio.html#hack2020">
-              <img class="rig-img" src="img\Hackathon\2020\4-3.png">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">Hackathon 2020
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio2.html#cali">
-              <img class="rig-img" src="img\Nature Photography\Cali 2019\Squirrel 4-3.jpg">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">Nature Photography: California
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio2.html#es">
-              <img class="rig-img" src="img/Engineering_Society/Engineering_Department_Logo_4-3-02.png">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">UChicago Engineering Society
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio2.html#CCD">
-              <img class="rig-img" src="img/CCD/CCD_4-3.png">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">The CCD
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio3.html#chiventure">
-              <img class="rig-img" src="img/Chiventure/Banner.png">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">Chiventure
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio3.html#shakedlab">
-              <img class="rig-img" src="img/Shaked/Home_4-3.jpg">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">Shaked Lab Website
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio3.html#Hackathon19">
-              <img class="rig-img" src="img/Hackathon/Board.jpg">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">Hackathon 2019
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio4.html#bagel">
-              <img class="rig-img" src="img/Bagel/Bagel_4-3.png">
-              <span class="rig-overlay">
-              </span>
-              <span class="rig-text">Bagel
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio4.html#go">
-              <img class="rig-img" src="img/Go/go_4-3.png">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">Go
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio4.html#abstract">
-              <img class="rig-img" src="img\Abstract_Photography\Drain_Photo_4-3.jpg">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">Abstract Photography
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
         </ul>
 
       </div>
@@ -247,17 +126,20 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">
-              <img src="img\Education Images\UChicago Seal.png" class="icon_photo"> &nbsp
+              <img src="img\Education_Images\UChicago Seal.png" class="icon_photo"> &nbsp
               University of Chicago - Chicago, IL</h3>
             <div class="subheading">Master of Science</div>
             <div>Computer Science</div>
             <div class="subheading mb-3">Representative Courses</div>
             <ul class="fa-ul mb-0">
               <li>
-                <i class="fa-li fa fa-project-diagram"></i> MPCS 51240 - Product Management (Currently Enrolled)
+                <i class="fa-li fa fa-project-diagram"></i> MPCS 51240 - Product Management
               </li>
               <li>
-                <i class="fa-li fa fa-vr-cardboard"></i> MPCS 51230 - User Interface and User Experience Design (Currently Enrolled)
+                <i class="fa-li fa fa-vr-cardboard"></i> MPCS 51230 - User Interface and User Experience Design
+              </li>
+              <li>
+                <i class="fa-li fa fa-vr-cardboard"></i> CMSC 33200 - Computer Security (Currently Enrolled)
               </li>
             </ul>
           </div>
@@ -269,7 +151,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">
-              <img src="img\Education Images\UChicago Seal.png" class="icon_photo"> &nbsp
+              <img src="img\Education_Images\UChicago Seal.png" class="icon_photo"> &nbsp
               University of Chicago - Chicago, IL</h3>
             <div class="subheading">Bachelor of Science</div>
             <div>Computer Science</div>
@@ -338,7 +220,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">
-              <img src="img\Education Images\Big Idea Logo.jpg" class="icon_photo"> &nbsp
+              <img src="img\Education_Images\Big Idea Logo.jpg" class="icon_photo"> &nbsp
               Big Idea Gap Year - Be'er Sheva, Israel</h3>
             <div> Training Course for Web and Mobile Programmers. Also participated in a one month internship at the Center for Development and innovation in Be’er Sheva’s high-tech park.
             </div>
@@ -351,7 +233,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">
-              <img src="img\Education Images\BxSci_Logo_New.jpg" class="icon_photo"> &nbsp
+              <img src="img\Education_Images\BxSci_Logo_New.jpg" class="icon_photo"> &nbsp
               Bronx High School of Science - New York, NY</h3>
             <div> Specialized Science High School - Math Research Specialization</div>
             <p></p>
