--- a/html/portfolio4.html
+++ b/html/portfolio4.html
@@ -128,7 +128,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="abstract">
       <div class="w-100">
         <h2 class="mb-5">Abstract Photography Award</h2>
-        <img class="banner-img" src="..\img\Abstract Photography\Drain Photo.JPG"></img>
+        <img class="banner-img" src="..\img\Abstract_Photography\Drain Photo.JPG"></img>
         <p>This photograph was chosen amongst a handful of other winners in a city-wide abstract art competition, titled <i>Alternative Approaches: Seeking the Uncommon</i>. The photo was displayed at an exhibition of the winning works in Times Square Tower.
         </p>
         <p>
