Updated content in education, experience, and activities

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="subheading mb-5">
           <a href="mailto:sshatzkin@uchicago.edu">sshatzkin@uchicago.edu</a>
         </div>
-        <p class="lead mb-5">I'm a joint Master's and undergraduate computer science student at The University of Chicago, with an focus in human-computer interaction and biotechnology. I'm passionate about exploring these subjects through multidisciplinary study and the pursuit of exploratory passion projects.</p>
+        <p class="lead mb-5">I'm a software engineer excited about many different things! If you'd like to learn about them, you've come to the right place!</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/samshatzkin/">
             <i class="fab fa-linkedin-in"></i>
@@ -130,21 +130,24 @@
               University of Chicago - Chicago, IL</h3>
             <div class="subheading">Master of Science</div>
             <div>Computer Science</div>
-            <div class="subheading mb-3">Representative Courses</div>
+            <div class="subheading">Representative Courses</div>
             <ul class="fa-ul mb-0">
               <li>
-                <i class="fa-li fa fa-project-diagram"></i> MPCS 51240 - Product Management
+                <i class="fa-li fa fa-vr-cardboard"></i> Application Development Capstone
               </li>
               <li>
-                <i class="fa-li fa fa-vr-cardboard"></i> MPCS 51230 - User Interface and User Experience Design
+                <i class="fa-li fa fa-vr-cardboard"></i> User Interface and User Experience Design
               </li>
               <li>
-                <i class="fa-li fa fa-vr-cardboard"></i> CMSC 33200 - Computer Security (Currently Enrolled)
+                <i class="fa-li fa fa-project-diagram"></i> Product Management
+              </li>
+              <li>
+                <i class="fa-li fa fa-microchip"></i> Computer Security <b>* PhD Level</b>
               </li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Currently Enrolled, Class of 2022</span>
+            <span class="text-primary">Class of 2022</span>
           </div>
         </div>
         
@@ -154,66 +157,71 @@
               <img src="img\Education_Images\UChicago Seal.png" class="icon_photo"> &nbsp
               University of Chicago - Chicago, IL</h3>
             <div class="subheading">Bachelor of Science</div>
-            <div>Computer Science</div>
+            <div>Computer Science, with a Specialization in Human Computer Interaction</div>
             <div class="subheading mb-3">Representative Courses</div>
             <div>Human-Computer Interaction</div> 
             <ul class="fa-ul mb-0">
               <li>
-                <i class="fa-li fa fa-vr-cardboard"></i> CMSC 20300 - Intro to Human-Computer Interaction
+                <i class="fa-li fa fa-vr-cardboard"></i> Topics in Human Robot Interaction <b>* PhD Level</b>
               </li>
               <li>
-                <i class="fa-li fa fa-vr-cardboard"></i> MAAD 23281 - Topics in Human Robot Interaction
+                <i class="fa-li fa fa-vr-cardboard"></i> Virtual Reality Production
               </li>
               <li>
-                <i class="fa-li fa fa-vr-cardboard"></i> MAAD 24920 - Virtual Reality Production
+                <i class="fa-li fa fa-vr-cardboard"></i> Electronic Music: Compising with Sound
+              </li>
+            </ul>
+            <div>Engineering</div>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-microchip"></i> Creative Machines and Innovative Instrumentation
+              <li>
+                <i class="fa-li fa fa-microchip"></i> Engineering Interactive Electronics onto Printed Circuit Boards
+              </li>
+              <li>
+                <i class="fa-li fa fa-microchip"></i> Computer Architecture
               </li>
             </ul>
             <div>Computer Science</div>
             <ul class="fa-ul mb-0">
               <li>
-                <i class="fa-li fa fa-project-diagram"></i> CMSC 29512 - Entrepeneurship in Technology <b>* Master's Level</b>
+                <i class="fa-li fa fa-project-diagram"></i> Entrepeneurship in Technology <b>* Master's Level</b>
               </li>
               <li>
-                <i class="fa-li fa fa-microchip"></i> CMSC 23230 - Engineering Interactive Electronics onto Printed Circuit Boards
+                <i class="fa-li fa fa-project-diagram"></i> Data Science for Compuer Scientists
               </li>
               <li>
-                <i class="fa-li fa fa-microchip"></i> CMSC 22200 - Computer Architecture
-              </li>
-              <li>
-                <i class="fa-li fa fa-chart-bar"></i> CMSC 21800 - Data Science for Compuer Scientists
-              </li>
-              <li>
-                <i class="fa-li fa fa-chart-bar"></i> CMSC 23900 - Data Visualization
+                <i class="fa-li fa fa-project-diagram"></i> Data Visualization
               </li>
               
               <li>
-                <i class="fa-li fa fa-calculator"></i> CMSC 27200 - Theory of Algorithms
+                <i class="fa-li fa fa-project-diagram"></i> Theory of Algorithms
+              </li>
+              <li>
+                <i class="fa-li fa fa-project-diagram"></i> Graph Theory
               </li> 
             </ul>
             <div>Biology</div>
             <ul class="fa-ul mb-0">
               <li>
-                <i class="fa-li fa fa-dna"></i> ECEV 44500 - Networks in Ecology and Evolution <b>* Graduate Level</b>
+                <i class="fa-li fa fa-dna"></i> Networks in Ecology and Evolution <b>* PhD Level</b>
               </li>
               <li>
-                <i class="fa-li fa fa-dna"></i> BIOS 29208 - Machine Learning & Advanced Analytics for Biomedicine
+                <i class="fa-li fa fa-dna"></i> Machine Learning & Advanced Analytics for Biomedicine
               </li>
               <li>
-                <i class="fa-li fa fa-dna"></i> BIOS 26120 - An Introduction to Bioinformatics and Proteomics <b>* Master's Level</b>
+                <i class="fa-li fa fa-dna"></i> Introduction to Bioinformatics and Proteomics <b>* Master's Level</b>
               </li>
               <li>
-                <i class="fa-li fa fa-dna"></i> BIOS 20151 - Quantitative Modeling in Biology
+                <i class="fa-li fa fa-dna"></i> Quantitative Modeling in Biology
               </li>
               <li>
-                <i class="fa-li fa fa-bone"></i> BIOS 20153 - Fundamentals of Ecology and Evolutionary Biology
-              </li>
-              <li>
-                <i class="fa-li fa fa-bone"></i> BIOS 29142 - From Fossils to Fermi's Paradox: Origin and Evolution of Intelligent Life
+                <i class="fa-li fa fa-bone"></i> From Fossils to Fermi's Paradox: Origin and Evolution of Intelligent Life
               </li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Currently Enrolled, Class of 2022</span>
+            <span class="text-primary">Class of 2022</span>
           </div>
         </div>
 
@@ -267,7 +275,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Chicago Engineering Society - Chicago, IL</h3>
+            <h3 class="mb-0">
+              <img src="img\Engineering_Society\ES Gear.png" class="icon_photo"> &nbsp
+              University of Chicago Engineering Society - Chicago, IL
+            </h3>
             <div class="subheading mb-3">President</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
