--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Just for fun</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -128,10 +128,10 @@
             <h3 class="mb-0">
               <img src="img\Education_Images\UChicago Seal.png" class="icon_photo"> &nbsp
               University of Chicago - Chicago, IL</h3>
-            <div class="subheading">Master of Science</div>
-            <div>Computer Science</div>
-            <div class="subheading">Representative Courses</div>
-            <ul class="fa-ul mb-0">
+            <div class="subheading mb-1">Master of Science</div>
+            <div class="mb-2">Computer Science</div>
+            <div class="subheading mb-1">Representative Courses</div>
+            <ul class="fa-ul mb-2">
               <li>
                 <i class="fa-li fa fa-vr-cardboard"></i> Application Development Capstone
               </li>
@@ -156,11 +156,11 @@
             <h3 class="mb-0">
               <img src="img\Education_Images\UChicago Seal.png" class="icon_photo"> &nbsp
               University of Chicago - Chicago, IL</h3>
-            <div class="subheading">Bachelor of Science</div>
-            <div>Computer Science, with a Specialization in Human Computer Interaction</div>
-            <div class="subheading mb-3">Representative Courses</div>
-            <div>Human-Computer Interaction</div> 
-            <ul class="fa-ul mb-0">
+            <div class="subheading mb-1">Bachelor of Science</div>
+            <div class="mb-2">Computer Science, with a Specialization in Human Computer Interaction</div>
+            <div class="subheading mb-1">Representative Courses</div>
+            <div class="mb-1">Human-Computer Interaction</div> 
+            <ul class="fa-ul mb-2">
               <li>
                 <i class="fa-li fa fa-vr-cardboard"></i> Topics in Human Robot Interaction <b>* PhD Level</b>
               </li>
@@ -171,8 +171,8 @@
                 <i class="fa-li fa fa-vr-cardboard"></i> Electronic Music: Compising with Sound
               </li>
             </ul>
-            <div>Engineering</div>
-            <ul class="fa-ul mb-0">
+            <div class="mb-1">Engineering</div>
+            <ul class="fa-ul mb-2">
               <li>
                 <i class="fa-li fa fa-microchip"></i> Creative Machines and Innovative Instrumentation
               <li>
@@ -182,8 +182,8 @@
                 <i class="fa-li fa fa-microchip"></i> Computer Architecture
               </li>
             </ul>
-            <div>Computer Science</div>
-            <ul class="fa-ul mb-0">
+            <div class="mb-1">Computer Science</div>
+            <ul class="fa-ul mb-2">
               <li>
                 <i class="fa-li fa fa-project-diagram"></i> Entrepeneurship in Technology <b>* Master's Level</b>
               </li>
@@ -201,8 +201,8 @@
                 <i class="fa-li fa fa-project-diagram"></i> Graph Theory
               </li> 
             </ul>
-            <div>Biology</div>
-            <ul class="fa-ul mb-0">
+            <div class="mb-1">Biology</div>
+            <ul class="fa-ul mb-2">
               <li>
                 <i class="fa-li fa fa-dna"></i> Networks in Ecology and Evolution <b>* PhD Level</b>
               </li>
@@ -276,6 +276,21 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">
+              <img src="img\Icons\Activities\AMNH-logo.png" class="icon_photo"> &nbsp
+              American Museum of Natural History Junior Council - New York, NY
+            </h3>
+            <div class="subheading mb-3"></div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">December 2022 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">
               <img src="img\Engineering_Society\ES Gear.png" class="icon_photo"> &nbsp
               University of Chicago Engineering Society - Chicago, IL
             </h3>
@@ -293,40 +308,20 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">October 2018 - Present</span>
+            <span class="text-primary">October 2018 - June 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Kappa Theta Pi, Professional Technology Fraternity - Chicago, IL</h3>
-            <div class="subheading mb-3">Member</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Member of prestigious co-ed technology fraternity, participating in educational, career development, and networking events.
-              </li>
-            </ul>
+            <h3 class="mb-0">
+              <img src="img\Icons\Activities\KTP.png" class="icon_photo"> &nbsp
+              Kappa Theta Pi, Professional Technology Fraternity - Chicago, IL
+            </h3>
+            <div class="subheading mb-3"></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2015 - June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">B’nai B’rith Youth Organization - New York, NY</h3>
-            <div class="subheading mb-3">Regional President, Regional Head of Communications</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Oversaw and created educational programs, social events, charity initiatives, social media presence, digital outreach and training programs
-              </li>
-              <li>
-                Implemented recruitment and fundraising procedures and goals
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2015 - June 2017</span>
+            <span class="text-primary">April 2021 - June 2022</span>
           </div>
         </div>
 
@@ -339,8 +334,8 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages</div>
-        <ul class="list-inline dev-icons mb-0">
+        <div class="subheading mb-1">Programming Languages</div>
+        <ul class="list-inline dev-icons mb-2">
           <li class="list-inline-item">
             <i class="fab icon-c"></i>
           </li>
@@ -354,15 +349,6 @@
             <i class="fab icon-csharp"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab icon-elm"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab icon-html"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab icon-css"></i>
-          </li>
-          <li class="list-inline-item">
             <i class="fab fa-js-square"></i>
           </li>
           <li class="list-inline-item">
@@ -372,12 +358,21 @@
             <i class="fab icon-java"></i>
           </li>
           <li class="list-inline-item">
+            <i class="fab icon-html"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab icon-css"></i>
+          </li>
+          <li class="list-inline-item">
             <i class="fab fa-r-project"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab icon-elm"></i>
           </li>
         </ul>
 
-        <div class="subheading mb-3">Tools</div>
-        <ul class="list-inline dev-icons mb-0">
+        <div class="subheading mb-1">Tools</div>
+        <ul class="list-inline dev-icons mb-2">
           <li class="list-inline-item">
             <i class="fab icon-unity"></i>
           </li>
@@ -404,8 +399,8 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Additional Languages, Tools and Skills</div>
-        <ul class="fa-ul mb-0">
+        <div class="subheading mb-1">Additional Languages, Tools and Skills</div>
+        <ul class="fa-ul mb-2">
           <li>
             <i class="fa-li fa fa-check"></i> Photography &amp; Videography</li>
           <li>
@@ -425,25 +420,53 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h2 class="mb-5">Extracirricular Interests</h2>
-        <p>
-          When I'm not working, I enjoy reading, playing board games with my friends, tending my garden, or getting out into nature to take some pictures.
-        </p>
-        <p>
-          At school, I’m the President of UChicago’s Engineering Society, a student organization that serves as the engineering hub for UChicago’s undergrad student body. We host educational workshops, guest speakers, hackathons and weekly project nights
-          where members
-          work on a variety of long and short - term projects.
-        </p>
-        <div class="subheading mb-3">Recent Reads</div>
-        <ul class="fa-ul mb-0">
+        <h2 class="mb-5">Just for Fun!</h2>
+        <div class="subheading mb-0">Currently Reading</div>
+        <ul class="fa-ul mb-3">
+          <li>
+            <i class="fa-li fa fa-book"></i> <i>H.P. Lovecraft: The Complete Fiction</i> by H.P. Lovecraft
+          </li>
+          <li>
+            <i class="fa-li fa fa-book"></i> <i>The Drunkard's Walk: How Randomness Rules Our Lives</i> by Leonard Mlodinow
+          </li>
+        </ul>
+
+        <div class="subheading mb-0">Recent Reads</div>
+        <ul class="fa-ul mb-3">
+          <li>
+            <i class="fa-li fa fa-book"></i> <i>Freakonomics</i> by Stephen Dubner and Steven Levitt.
+          </li>
+          <li>
+            <i class="fa-li fa fa-book"></i> <i>Do Androids Dream of Electric Sheep</i> by Philip K. Dick
+          </li>
           <li>
             <i class="fa-li fa fa-book"></i> <i>Invisible Planets: Contemporary Chinese Science Fiction in Translation</i> edited by Ken Liu.
           </li>
           <li>
             <i class="fa-li fa fa-book"></i> <i>Algorithms to Live By</i> by Brian Christian and Tom Griffiths.
           </li>
+        </ul>
+
+        <div class="subheading mb-0">Currently Watching</div>
+        <ul class="fa-ul mb-3">
           <li>
-            <i class="fa-li fa fa-book"></i> <i>The Wasp That Brainwashed the Caterpillar</i> by Matt Simon.
+            <i class="fa-li fa fa-tv"></i> <i>White Lotus Season 2</i> (No Spoilers Please!)
+          </li>
+        </ul>
+
+        <div class="subheading mb-0">Recent Movies / TV</div>
+        <ul class="fa-ul mb-3">
+          <li>
+            <i class="fa-li fa fa-film"></i> <i>Avatar the Way of Water</i>
+          </li>
+          <li>
+            <i class="fa-li fa fa-film"></i> <i>The Menu</i>
+          </li>
+          <li>
+            <i class="fa-li fa fa-tv"></i> <i>Stranger Things Season 4</i> Looking forward to season 5!
+          </li>
+          <li>
+            <i class="fa-li fa fa-tv"></i> <i>Shameless</i>
           </li>
         </ul>
       </div>
